Linker cleanup